--- a/src/components/ModalWindow/ModalWindow.module.css
+++ b/src/components/ModalWindow/ModalWindow.module.css
@@ -39,3 +39,10 @@
   margin-top: 15px;
   text-align: center;
 }
+
+@media (max-width: 767.98px) {
+  .modal_content {
+    padding: 20px 30px;
+    font-size: 16px;
+  }
+}
