--- a/src/components/ModalWindow/ModalWindow.module.css
+++ b/src/components/ModalWindow/ModalWindow.module.css
@@ -20,6 +20,7 @@
   justify-content: center;
   background-color: #fff;
   max-width: 541px;
+  width: 100%;
   padding: 40px;
   border-radius: 24px;
   font-size: 18px;
