--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,7 @@
 .header {
   padding: 20px 0;
   background-color: #fff;
+  box-shadow: 0px 0px 10px 0px gray;
 }
 .header_content {
   display: flex;
